# PowerGenome-data

./: CLUSTER_REGIONS_README.md  README.md  SETUP_INSTRUCTIONS.txt  build_new_pg_dg_inputs.py  cluster_regions.py  extract_location_variation.py  match_reeds_regions_to_cities.py  merge_transmission_capacity.py  mkdocs.yml  pyproject.toml  transform_reeds_generators.py  transform_reeds_load.py
.github/workflows/: docs.yml
EI_PJM/extra_inputs/: emission_policies.csv  scenario_inputs.csv
EI_PJM/resource_groups/: add_capacity_mw_col.py  offshorewind_cpa_assignments_all_EI_PJM.parquet  offshorewind_fixed_false.json  offshorewind_fixed_true.json  offshorewind_floating_false.json  offshorewind_floating_true.json  offshorewind_lcoe_EI_PJM.parquet  offshorewind_lcoe_EI_PJM_fixed_true.csv  offshorewind_lcoe_EI_PJM_floating_true.csv  onshorewind_cpa_assignments_all_EI_PJM.parquet  onshorewind_group.json  onshorewind_lcoe_EI_PJM.parquet  solar_cpa_assignments_all_EI_PJM.parquet  solar_group.json  solar_lcoe_EI_PJM.parquet
EI_PJM/settings/: data.yml  demand.yml  distributed_gen.yml  extra_inputs.yml  fuels.yml  model_definition.yml  resource_tags.yml  resources.yml  scenario_management.yml  (+1 more)
cache_data/: hierarchy_EI.csv
data/: distributed_capacity.parquet  distributed_profiles.parquet  fuel_prices.csv  network_costs_EI_PJM.csv  operational_constraints_reeds.csv  reeds_generators_transformed.csv  reeds_load_transformed.parquet  regional_cost_multipliers.csv  technology_costs_atb.parquet  technology_heat_rates_nrelatb.csv  transmission_capacity_merged.csv
docs/: index.md
(+28 files in other folders)
