[project]
name = "powergenome-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.2",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tabula-py>=2.10.0",
    "tqdm>=4.67.1",
]
